force-app/main/default/objects/Business_License__c.object
<CustomObject>
    <description>Stores license information grouped by Business Unit. Includes Baseline Licenses for each Business Unit, Paid Licenses and Total Active Licenses.</description>
    <fields>
        <fullName>Baseline_Licenses__c</fullName>
        <description>Centrally funded licenses.</description>
        <inlineHelpText>Centrally funded licenses.</inlineHelpText>
        <label>Initial Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Licenses__c</fullName>
        <description>Stores the number of Paid Licenses for each Business Unit.</description>
        <label>Paid Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Active_Licenses__c</fullName>
        <description>Total Active Licenses for each Business Unit</description>
        <label>Total Active Licenses</label>
        <summaryFilterItems>
            <field>Role_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Role_License__c.Parent_Business_Unit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Licenses__c</fullName>
        <formula>Baseline_Licenses__c  +  Paid_Licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Baseline_Licenses__c</columns>
        <columns>Paid_Licenses__c</columns>
        <columns>Total_Active_Licenses__c</columns>
        <columns>Total_Licenses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Licenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>